--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Tip Calculator 2</title>
 </head>
 <body>
-    
+    <h1>Tip Calculator 2</h1>
     <script src="./script.js"></script>
 </body>
 </html>
