more style and image added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Tip Calculator 2</h1>
+    <img src="./images/CHW0118_fd_tipping.jpg" alt="">
     <script src="./script.js"></script>
 </body>
 </html>
